--- a/Ship Fighters/Ship Fighters.csproj
+++ b/Ship Fighters/Ship Fighters.csproj
@@ -15,7 +15,7 @@
     <MonoGameContentBuilderExe>
     </MonoGameContentBuilderExe>
     <IsWebBootstrapper>true</IsWebBootstrapper>
-    <PublishUrl>C:\Users\oem\Documents\Visual Studio 2015\Projects\Ship Fighters\Ship Fighters\Publish\</PublishUrl>
+    <PublishUrl>C:\Users\oem\Documents\ShipFighters\Github\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Web</InstallFrom>
     <UpdateEnabled>true</UpdateEnabled>
@@ -32,8 +32,9 @@
     <PublisherName>Sean Norris</PublisherName>
     <SuiteName>Ship Fighters</SuiteName>
     <WebPage>publish.htm</WebPage>
+    <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
     <AutorunEnabled>true</AutorunEnabled>
-    <ApplicationRevision>14</ApplicationRevision>
+    <ApplicationRevision>16</ApplicationRevision>
     <ApplicationVersion>1.1.1.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
